@@ -1,27 +1,28 @@
 (set c 1) (if c (exit (quiet)) (exit "!")) ; "","0",""
-(set c 0) (if c (exit (quiet)) (exit "!")) ; "","!Installation complete ./installer can be found in T:0",""
-(exit) ; "","Installation complete ./installer can be found in T:0",""
+(set c 0) (if c (exit (quiet)) (exit "!")) ; "","!Installation complete Test App can be found in T:0",""
+(set c 0 @app-name "Killer App") (if c (exit (quiet)) (exit "!")) ; "","!Installation complete Killer App can be found in T:0",""
+(exit) ; "","Installation complete Test App can be found in T:0",""
 (set @app-name "app") (exit) ; "","Installation complete app can be found in T:0",""
-(set @default-dest "T:") (exit) ; "","Installation complete ./installer can be found in T:0",""
+(set @default-dest "T:") (exit) ; "","Installation complete Test App can be found in T:0",""
 (set @default-dest "") (exit) ; "","Installation complete0",""
 (set @app-name "app") (set @default-dest "T:") (exit) ; "","Installation complete app can be found in T:0",""
 (exit (quiet)) ; "","0",""
-(exit "1") ; "","1Installation complete ./installer can be found in T:0",""
+(exit "1") ; "","1Installation complete Test App can be found in T:0",""
 (exit "1" (quiet)) ; "","10",""
 (exit (quiet) "1") ; "","10",""
-(exit "1" "2" "3") ; "","123Installation complete ./installer can be found in T:0",""
+(exit "1" "2" "3") ; "","123Installation complete Test App can be found in T:0",""
 (exit "1" "2" undef) ; "","Line 1: Undefined variable 'undef' 0",""
-(set @strict 0) (exit "1" "2" undef) ; "","12Installation complete ./installer can be found in T:0",""
-(exit 1 2 3) ; "","123Installation complete ./installer can be found in T:0",""
+(set @strict 0) (exit "1" "2" undef) ; "","12Installation complete Test App can be found in T:0",""
+(exit 1 2 3) ; "","123Installation complete Test App can be found in T:0",""
 (exit "1" "2" "3" (quiet)) ; "","1230",""
 (exit "1" "2" "3" (quiet) (safe)) ; "","Line 1: syntax error, unexpected '(', expecting ')' '('",""
 (exit "1" "2" "3" (safe)) ; "","Line 1: syntax error, unexpected SAFE 'safe'",""
-(exit) (+ 1); "","Installation complete ./installer can be found in T:0",""
-(exit "1") (+ 1); "","1Installation complete ./installer can be found in T:0",""
-(exit "1" "2" "3") (+ 1); "","123Installation complete ./installer can be found in T:0",""
+(exit) (+ 1); "","Installation complete Test App can be found in T:0",""
+(exit "1") (+ 1); "","1Installation complete Test App can be found in T:0",""
+(exit "1" "2" "3") (+ 1); "","123Installation complete Test App can be found in T:0",""
 (exit "1" "2" "3" (quiet)) (+ 1); "","1230",""
 (exit "1" "2" "3" (quiet) (safe)) (+ 1); "","Line 1: syntax error, unexpected '(', expecting ')' '('",""
 (exit "1" "2" "3" (safe)) (+ 1); "","Line 1: syntax error, unexpected SAFE 'safe'",""
-(procedure die (die)) (onerror (die)) (exit); "","Installation complete ./installer can be found in T:0",""
-(procedure die (die)) (onerror (die)) (exit) (+ 1); "","Installation complete ./installer can be found in T:0",""
-(exit (askstring (prompt "p") (help "h") (default "d")) "1" "2" "3") ; "","phd d123Installation complete ./installer can be found in T:0",""
+(procedure die (die)) (onerror (die)) (exit); "","Installation complete Test App can be found in T:0",""
+(procedure die (die)) (onerror (die)) (exit) (+ 1); "","Installation complete Test App can be found in T:0",""
+(exit (askstring (prompt "p") (help "h") (default "d")) "1" "2" "3") ; "","phd d123Installation complete Test App can be found in T:0",""
