@@ -13,7 +13,7 @@
 (onerror (+ a)) (set a 10) (+ 2) (+ b); "","Line 1: Undefined variable 'b' 10",""
 (onerror (+ a)) (set a 10) (+ 2) (+ b) (+ 1); "","Line 1: Undefined variable 'b' 10",""
 (onerror (+ 5)) (set a 10) (+ 2) (+ b); "","Line 1: Undefined variable 'b' 5",""
-(onerror (+ 5)) (set a 10) (exit) (+ 2) (+ b); "","Installation complete ./installer can be found in T:0",""
+(onerror (+ 5)) (set a 10) (exit) (+ 2) (+ b); "","Installation complete Test App can be found in T:0",""
 (set @strict 0) (onerror (+ 1)) (+ 2) (+ a); "","0",""
 (set @strict 0) (onerror (+ 1)) (+ 2) (onerror (+ 3)) (+ a); "","0",""
 (set @strict 0) (onerror (+ a)) (set a 10) (+ 2) (+ b); "","0",""
